--- a/pom.xml
+++ b/pom.xml
@@ -8,33 +8,95 @@
     <artifactId>reactive-websockets</artifactId>
     <version>1.0</version>
 
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+    <name>reactive-websocket</name>
+    <description>Reactive websocket lib.</description>
+    <organization>
+        <name>Ordinary Nick</name>
+        <url>https://ordinarynick.com/</url>
+    </organization>
+    <developers>
+        <developer>
+            <id>ON</id>
+            <name>Ordinary Nick</name>
+            <email>rostislav@ordinarynick.com</email>
+        </developer>
+    </developers>
 
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
+        <!-- dependencies -->
+        <javax.websocket.version>1.1</javax.websocket.version>
+        <gson.version>2.8.2</gson.version>
+        <rx-java.version>2.1.12</rx-java.version>
+        <junit.jupiter.version>5.6.0</junit.jupiter.version>
+        <mockito.version>3.2.4</mockito.version>
+        <!-- plugins -->
+        <compiler.version>3.8.1</compiler.version>
+        <surefire.version>2.22.2</surefire.version>
+    </properties>
 
     <dependencies>
         <!-- Main WebSocket dependency (annotations)-->
         <dependency>
             <groupId>javax.websocket</groupId>
             <artifactId>javax.websocket-api</artifactId>
-            <version>1.1</version>
+            <version>${javax.websocket.version}</version>
         </dependency>
 
         <!-- Json to/from convert -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.2</version>
+            <version>${gson.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxjava -->
         <dependency>
             <groupId>io.reactivex.rxjava2</groupId>
             <artifactId>rxjava</artifactId>
-            <version>2.1.12</version>
+            <version>${rx-java.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${compiler.version}</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.version}</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
